layout: questionaire options alignment fix

--- a/components/QuestionaireOption/QuestionaireOption.module.scss
+++ b/components/QuestionaireOption/QuestionaireOption.module.scss
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  justify-self: center;
+
   gap: 13px;
 
   height: 135px;
