--- a/pages/questionaire/index.module.scss
+++ b/pages/questionaire/index.module.scss
@@ -23,6 +23,7 @@
 
     .options_grid {
       display: grid;
+      justify-content: center;
       padding-bottom: 80px;
 
       .inputOption {
